--- a/Probability Questions.ipynb
+++ b/Probability Questions.ipynb
@@ -7,6 +7,8 @@
     "editable": true
    },
    "source": [
+    "## Probability Questions\n",
+    "\n",
     "1. Calculate the probability of flipping a balanced coin four times and getting each pattern: HTTH, HHHH and TTHH.\n",
     "    - Each probability is the same 1/2 * 1/2 * 1/2 * 1/2 = .0625 \n",
     "\n",
@@ -27,6 +29,8 @@
     "editable": true
    },
    "source": [
+    "## Descriptive Statistics - The Brady's\n",
+    "\n",
     "1.\tGreg was 14, Marcia was 12, Peter was 11, Jan was 10, Bobby was 8, and Cindy was 6 when they started playing the Brady kids on The Brady Bunch. Cousin Oliver was 8 years old when he joined the show. What are the mean, median, and mode of the kids' ages when they first appeared on the show? What are the variance, standard deviation, and standard error?\n",
     "    1.\tMean: 9.86 (python 9.85)\n",
     "    2.\tMedian: 10 (python 10.0)\n",
@@ -49,6 +53,64 @@
     "\n",
     "    1.\tI removed SciPhi Phanatic as an outlier and consider 20% - the mean of the 3 remaining values to be fans of the show\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## Baye's Rule\n",
+    "\n",
+    "A diagnostic test has a 98% probability of giving a positive result when applied to a person suffering from Thripshaw's Disease, and 10% probability of giving a (false) positive when applied to a non-sufferer. It is estimated that 0.5 % of the population are sufferers. Suppose that the test is now administered to a person whose disease status is unknown. Calculate the probability that the test will:\n",
+    "\n",
+    "P(Infected| Positive Test) = P(Positive Test| Infected) * P(Infected) / P(Positive Test)\n",
+    "\n",
+    "= .9999 * .000001/(.000001*.9999 + .999999*.0001) = .0099 or .99%\n",
+    "\n",
+    "A=infected\n",
+    "B=positive test\n",
+    "\n",
+    "P(A|B) = P(B|A) * P(A) / [P(A)*P(B|A) + P(A~)*P(B|A~)]\n",
+    "\n",
+    "1. Be positive\n",
+    "    - Intuitive:\n",
+    "        .1*.995 + .98*.005 = .1044 or 10.44%\n",
+    "    -Probability using Baye's rule\n",
+    "    P(B) = P(A) * P(B|A) + P(A~) * P(B/A~)\n",
+    "         = (.005) * (.98) + (.995)* (.1)\n",
+    "         = .0049 + .0995 = 10.44%\n",
+    "    \n",
+    "2. Correctly diagnose a sufferer of Thripshaw's\n",
+    "    - Intuitive: .98\n",
+    "    - Probability using Bayes:\n",
+    "    A= positive test B = infected\n",
+    "    P(A|B) = .98\n",
+    "    \n",
+    "    \n",
+    "3. Correctly identify a non-sufferer of Thripshaw's\n",
+    "    - Intuitive: .9\n",
+    "    A = Not infected B= Negative test\n",
+    "    P(A|B) = P(B|A) * P(A) / [P(A)*P(B|A) + P(A~)*P(B|A~)]\n",
+    "           = .9 * .995/[.995*.9 + .005*.02]\n",
+    "           = .9999\n",
+    "    \n",
+    "4. Misclassify the person: Positive test when no disease or Negative test when has disease\n",
+    "P(A|B) = P(B|A) * P(A) / [P(A)*P(B|A) + P(A~)*P(B|A~)]\n",
+    "    - Intuitive: .1 + .02 = .12\n",
+    "    - Probability using Bayes:\n",
+    "    P(A|B) = .98 * .005/.1044 = .04693  -> prob infection given positive test\n",
+    "    P(A~|B) =.9531 -> Prob not infected given positive test\n",
+    "    \n",
+    "    B=negative test\n",
+    "    P(A|B) =  P(B|A) * P(A) / [P(A)*P(B|A) + P(A~)*P(B|A~)]\n",
+    "           =  .02 * .005 / [.005*.02 + .995*.9] = .00011\n",
+    "           \n",
+    "           Misclassification likelihood = .9531+ .00011 = .95321 = 95.3% likely\n",
+    "    "
    ]
   },
   {
