--- a/Distributions.ipynb
+++ b/Distributions.ipynb
@@ -229,6 +229,64 @@
     "\n",
     "The normal, binomial and gamma distributions seem to be best summarized by the mean and standard deviation. It seems like these statistics work best when there is a continuous, more symmetrical distribution"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Additionally:\n",
+    "\n",
+    "1. Generate two normally-distributed variables, one with a mean of 5 and standard deviation of 0.5, and the other with a mean of 10 and standard deviation of 1.\n",
+    "2. Add them together to create a third variable.\n",
+    "3. Graph the third variable using a histogram.\n",
+    "4. Compute the mean and standard deviation and plot them as vertical lines on the histogram.\n",
+    "5. Evaluate the descriptive statistics against the data.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXQAAAD8CAYAAABn919SAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADlVJREFUeJzt3W2MnOdVh/Hr0JAPlLcEb40JcbeKUqRAW0OWqBKtSNpS\nmQZhClIhqpARkRYqgmhVQU0rlSKEZJqWfEIFW7EcQQgtSkIDCSFRBERINGBHdl5oSqLKpXYd22k/\ntBES4OTwYR7HG9vrmZ23Z/fc109a7czsZOfcObv/3LnnzGxkJpKkje/b+i5AkjQdBrokFWGgS1IR\nBrokFWGgS1IRBrokFWGgS1IRBrokFWGgS1IRl8zzwTZt2pSLi4vzfEiN6ODBwedrr+23jnlqcc3Q\n7ro3soMHD76QmQvD7hfzfOn/0tJSHjhwYG6Pp9FFDD639E4QLa4Z2l33RhYRBzNzadj95rpD1/rl\nL3c77HVdnqFLUhEGugBYXh58qD57XZdn6ALaPFdtcc3Q7ro3slHP0N2hS1IRBrokFWGgS1IRBrok\nFeEcugCfIGuJva7LQNe6srjr/jk+2o2vPOaR3TfO8XGl2fDIRYCzyS2x13UZ6AJg797Bh+qz13UZ\n6JJUhIEuSUUY6JJUhIEuSUU4tijA2eSW2Ou63KFLUhEGugBnk1tir+sy0AU4m9wSe12XgS5JRRjo\nklSEgS5JRRjoklTE0ECPiCsj4h8j4j8i4umI+K3u9ssj4uGIeLb7fNnsy9WsZDqf3Ap7XdcoO/TT\nwIcz8xrgrcBvRMQ1wC7gkcy8Gnikuy5J6snQQM/M45n5eHf5W8AXgSuAHcAd3d3uAH5uVkVq9pxN\nboe9rmtNZ+gRsQj8KPAYsDkzj3dfeh7YPNXKNFfOJrfDXtc18nu5RMR3AncDH8zMb0bEK1/LzIyI\nC57KRcQysAywdevWyaqVZmS+f/ru1fzzd5qWkXboEfHtDML8zsy8p7v5RERs6b6+BTh5oX82M/dk\n5lJmLi0sLEyjZknSBYwy5RLA7cAXM/OPV3zpPmBnd3kn8PnplydJGtUoRy4/Afwy8GREHOpu+yiw\nG/hcRNwMfAV432xKlCSNYmigZ+a/ALHKl9853XLUF+eS22Gv6/KVopJUhIEuwNnkltjrugx0Ac4m\nt8Re12WgS1IRBrokFWGgS1IRBrokFTHye7moNmeT22Gv63KHLklFGOgCnE1uib2uy0AX4GxyS+x1\nXQa6JBVhoEtSEQa6JBVhoEtSEc6hC3A2uSX2ui536JJUhIEuwNnkltjrugx0Ac4mt8Re12WgS1IR\nBrokFWGgS1IRBrokFeEcugBnk1tir+tyhy5JRRjoApxNbom9rstAF+BsckvsdV0GuiQVYaBLUhEG\nuiQVYaBLUhHOoQtwNrkl9rouA13nWdx1f98lSBqDRy4CnE1uib2uy0AX4GxyS+x1XQa6JBVhoEtS\nEQa6JBUxNNAjYl9EnIyIp1bc9omIOBYRh7qP98y2TEnSMKPs0PcD2y9w+22Zua37eGC6ZWneMp1P\nboW9rmtooGfmo8A35lCLJGkCk5yh3xIRT3RHMpdNrSL1wtnkdtjrusYN9M8AVwHbgOPAp1e7Y0Qs\nR8SBiDhw6tSpMR9Os+ZscjvsdV1jBXpmnsjMlzLzZWAvcN1F7rsnM5cyc2lhYWHcOiVJQ4wV6BGx\nZcXV9wJPrXZfSdJ8DH1zroi4C7ge2BQRR4HfA66PiG1AAkeAX5thjZKkEQwN9My86QI33z6DWiRJ\nE/DtcwU4l9wSe12XL/2XpCIMdAHOJrfEXtdloAtwNrkl9rouA12SijDQJakIA12SijDQJakI59AF\nOJvcEntdlzt0SSrCQBfgbHJL7HVdBroAZ5NbYq/rMtAlqQifFJV6trjr/jk/4o1zfjzNizt0SSrC\nQJekIjxyEeBsckte/5EzRzwevVTjDl2SinCHLuDsXPKePf3Wodn7+oNvGlzY3W8dmj4DXcDZuWQD\nvb4XD2/tuwTNiEcuklSEgS5JRRjoklSEgS5JRfikqADn0FviHHpd7tAlqQh36AKcQ2+Jc+h1GegC\nnENviXPodXnkIklFGOiSVISBLklFGOiSVIRPigpwDr0lzqHX5Q5dkopwhy7AOfSWOIdel4EuwDn0\nljiHXpdHLpJUhIEuSUUMDfSI2BcRJyPiqRW3XR4RD0fEs93ny2ZbpiRpmFF26PuB7efctgt4JDOv\nBh7prkuSejT0SdHMfDQiFs+5eQdwfXf5DuCfgI9MsS7NmXPo7XAOva5xz9A3Z+bx7vLzwOYp1SNJ\nGtPET4pmZgKr7u8iYjkiDkTEgVOnTk36cJqR5eWzs+iq7esPvunsLLpKGTfQT0TEFoDu88nV7piZ\nezJzKTOXFhYWxnw4zdrevWdn0VXbi4e3Oote1LiBfh+ws7u8E/j8dMqRJI1rlLHFu4B/BX4oIo5G\nxM0MXjT8UxHxLPAufBGxJPVulCmXm1b50junXIskaQK+UlSSivDNuQQ4h94S59DrcocuSUW4Qxfg\n+6G3xPdDr8tAF+D7obfEGfS6PHKRpCIMdEkqwkCXpCIMdEkqwidFBTiH3hLn0Otyhy5JRbhDF+Ac\nekucQ6/LQBfgHHpLnEOvyyMXSSrCQJekIgx0SSrCQJekInxSVIBz6C1xDr0ud+iSVIQ7dAHOobfE\nOfS6DHQBzqG3xDn0ujxykaQiDHRJKsIjl3Vscdf9w+80NTf28JjqU5+9PrLbCZtZcIcuSUW4Qxew\ncjZZ1dnrutyhS1IRBrqAwWzyK/PJKs1e12WgCxjMJjuf3AZ7XZeBLklFGOiSVISBLklFGOiSVIRz\n6AKcTW6Jva7LHbokFWGgC3A2uSX2ui4DXYCzyS2x13UZ6JJUxERPikbEEeBbwEvA6cxcmkZRkqS1\nm8aUyw2Z+cIUvo8kaQIeuUhSEZPu0BN4KCIS+LPM9E8Mb1DOJrfDXtc1aaC/LTOPRcTrgIcj4pnM\nfHTlHSJiGVgG2Lp1/GfW/XNZknRxEx25ZOax7vNJ4F7gugvcZ09mLmXm0sLCwiQPpxlyNrkd9rqu\nsQM9Il4bEd915jLwbuCpaRWm+XI2uR32uq5Jjlw2A/dGxJnv85eZ+eBUqpIkrdnYgZ6ZXwbeMsVa\nJEkTcGxRkoow0CWpCN8PXYCzyS2x13W5Q5ekItyhC+CVueTv2/5kz5Vo1tZDr/t6oWD1Fwm6Qxfg\nbHJL7HVdBrokFWGgS1IRBrokFWGgS1IRTrkIcDa5Jfa6LnfoklSEgS7A98huib2uy0AX4GxyS+x1\nXZ6hj6DPP38naXqq/ylLd+iSVISBLklFGOiSVIRn6AKcTW6Jva7LHbokFWGgC3A2uSX2ui4DXYCz\nyS2x13UZ6JJUhIEuSUUY6JJUhIEuSUU4hy7A2eSW2Ou63KFLUhEGugBnk1tir+sy0AU4m9wSe12X\ngS5JRRjoklSEgS5JRRjoklSEc+gCnE1uib2uyx26JBVhoAtwNrkl9rouA12As8ktsdd1TRToEbE9\nIr4UEc9FxK5pFSVJWruxAz0iXgP8CfDTwDXATRFxzbQKkyStzSQ79OuA5zLzy5n5v8BfATumU5Yk\naa0mCfQrgK+uuH60u02S1IOZz6FHxDKw3F19MSK+NMa32QS8ML2qerEh1vCVPxp6lw2xjiFetYYR\n1rweTdyHdbDucj9LFxOT/ft+/Sh3miTQjwFXrrj+g91tr5KZe4A9EzwOEXEgM5cm+R59q7AGqLEO\n17A+uIbpm+TI5d+BqyPiDRFxKfBLwH3TKUuStFZj79Az83RE3AL8A/AaYF9mPj21yiRJazLRGXpm\nPgA8MKVaLmaiI5t1osIaoMY6XMP64BqmLDKz7xokSVPgS/8lqYh1F+gRsS8iTkbEUytuuzUinomI\nJyLi3oj43j5rHGaVNfxBV/+hiHgoIn6gzxqHudAaVnztwxGREbGpj9rWYpVefCIijnW9OBQR7+mz\nxmFW60VE/Gb3e/F0RHyyr/pGsUofPruiB0ci4lCfNQ6zyhq2RcQXujUciIjr+qxx3QU6sB/Yfs5t\nDwM/kplvBv4T+N15F7VG+zl/Dbdm5pszcxvwd8DH517V2uzn/DUQEVcC7wb+a94FjWk/F1gHcFtm\nbus+5vE80CT2c84aIuIGBq/Mfktm/jDwqR7qWov9nLOGzPzFMz0A7gbu6aOwNdjP+T9LnwR+v1vD\nx7vrvVl3gZ6ZjwLfOOe2hzLzdHf1Cwxm3tetVdbwzRVXXwus6ycvLrSGzm3A77DO6z/jIuvYMFZZ\nwweA3Zn5P919Ts69sDW4WB8iIoD3AXfNtag1WmUNCXx3d/l7gK/NtahzrLtAH8GvAn/fdxHjiIg/\njIivAu9n/e/QzxMRO4BjmXm471qm4JbuCGxfRFzWdzFjeCPw9oh4LCL+OSJ+vO+CJvB24ERmPtt3\nIWP4IHBr93v9KXo+PdhQgR4RHwNOA3f2Xcs4MvNjmXklg/pv6buetYiI7wA+ygb8D9EFfAa4CtgG\nHAc+3W85Y7kEuBx4K/DbwOe6ne5GdBPrfHd+ER8APtT9Xn8IuL3PYjZMoEfErwA/A7w/N/6s5Z3A\nL/RdxBpdBbwBOBwRRxgcez0eEd/fa1VjyMwTmflSZr4M7GXwzqEbzVHgnhz4N+BlBu8rsqFExCXA\nzwOf7buWMe3k7Nn/X9Pzz9KGCPSI2M7g3PZnM/O/+65nHBFx9YqrO4Bn+qplHJn5ZGa+LjMXM3OR\nQaD8WGY+33NpaxYRW1ZcfS9w3iTPBvA3wA0AEfFG4FI25htdvQt4JjOP9l3ImL4G/GR3+R1Av8dG\nmbmuPhj8r9dx4P8YhMbNwHMM3qr3UPfxp33XOcYa7mYQHE8Afwtc0Xeda13DOV8/Amzqu84xe/Hn\nwJNdL+4DtvRd5xhruBT4i+5n6nHgHX3XOc7PE4PJkV/vu74J+vA24CBwGHgMuLbPGn2lqCQVsSGO\nXCRJwxnoklSEgS5JRRjoklSEgS5JRRjoklSEgS5JRRjoklTE/wPe1+8GuCPyRwAAAABJRU5ErkJg\ngg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1887b30>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "norm1 = np.random.normal(5,0.5,100)\n",
+    "norm2 = np.random.normal(10,1,100)\n",
+    "\n",
+    "norm3 = norm1 + norm2\n",
+    "\n",
+    "mean = np.mean(norm3)\n",
+    "standard_deviation = np.std(norm3)\n",
+    "\n",
+    "plt.axvline(mean, color='b', linestyle='solid', linewidth=2)\n",
+    "plt.axvline(mean + standard_deviation, color='b', linestyle='dashed', linewidth=2)\n",
+    "plt.axvline(mean - standard_deviation, color='b', linestyle='dashed', linewidth=2) \n",
+    "\n",
+    "plt.hist(norm3)\n",
+    "plt.show()\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
