--- a/Distributions.ipynb
+++ b/Distributions.ipynb
@@ -280,6 +280,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluation 2\n",
+    "The mean and standard deviation appear to be good summaries of the combined values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
