--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -6,9 +6,10 @@
    "source": [
     "## Build a Naive Bayes Classifier to Perform Sentiment Analysis\n",
     "\n",
-    "Dataset: UCI Machine Learning Repository Sentiment Labelled Sentences Data Set \n",
+    "Dataset: UCI sentiment labeled sentences\n",
     " https://archive.ics.uci.edu/ml/datasets/Sentiment+Labelled+Sentences\n",
     " \n",
+    "Positive/Negative word list: University of Pittsburgh Subjectivity Lexiconhttp://mpqa.cs.pitt.edu/ \n",
     "Instructions: \n",
     "1. Pick one of the company data files and build your own classifier. \n",
     "2. When you're satisfied with its performance (at this point just using the accuracy measure shown in the example), test it on one of the other datasets to see how well these kinds of classifiers translate from one context to another.\n",
@@ -247,8 +248,8 @@
    "source": [
     "\n",
     "#naive bayes assumes independence between variables/features - test with a pairwise correlation matrix and heatmap\n",
-    "# sns.heatmap(data.corr())\n",
-    "# plt.show()\n"
+    "sns.heatmap(data.corr())\n",
+    "plt.show()\n"
    ]
   },
   {
