--- a/K-Means.ipynb
+++ b/K-Means.ipynb
@@ -15,6 +15,8 @@
     "The radial symmetry of the clusters seemed to increase at higher k values. There are a few outliers that increase the variance for the clusters they are incorporated into. \n",
     "Overall it is difficult to define a k that creates blobs that mean the conditions for using k-mean. The number of folds I think best fit these requirement is 7.\n",
     "\n",
+    "Also the data isn't well separated - it looks like one big blob. I don't there is enough separation to identify genuine differences in the population\n",
+    "\n",
     "http://scikit-learn.org/stable/auto_examples/cluster/plot_kmeans_assumptions.html#sphx-glr-auto-examples-cluster-plot-kmeans-assumptions-py"
    ]
   },
